@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Bug #1983: Fixed return type of fork(), fork1() and forkpty() calls.
+  Python expected the return type int but the fork familie returns pi_t.
+
 - Issue #1678380: Fix a bug that identifies 0j and -0j when they appear
   in the same code unit.
 
@@ -1385,6 +1388,9 @@ Tools/Demos
 
 Build
 -----
+
+- Bug #1983: Added a check to pyport to verify that sizeof(pid_t) is
+  smaller or equal sizeof(long).
 
 - Bug #1234: Fixed semaphore errors on AIX 5.2
 
